# rust-bitcoin

./: Cargo.toml
.cargo/: config.toml
contrib/: test.sh
embedded/: Cargo.toml  memory.x
embedded/src/: main.rs
examples/: bip32.rs  handshake.rs
fuzz/fuzz_targets/: deser_net_msg.rs  deserialize_address.rs  deserialize_amount.rs  deserialize_block.rs  deserialize_psbt.rs  deserialize_script.rs  deserialize_transaction.rs  outpoint_string.rs  uint128_fuzz.rs
src/: hash_types.rs  internal_macros.rs  io.rs  lib.rs
src/blockdata/: block.rs  constants.rs  opcodes.rs  script.rs  transaction.rs
src/consensus/: encode.rs
src/network/: address.rs  constants.rs  message.rs  message_blockdata.rs  message_filter.rs  message_network.rs  mod.rs  stream_reader.rs
src/util/: address.rs  amount.rs  base58.rs  bip143.rs  bip158.rs  bip32.rs  contracthash.rs  ecdsa.rs  hash.rs  key.rs  merkleblock.rs  misc.rs  mod.rs  uint.rs
src/util/psbt/: error.rs  macros.rs  mod.rs  raw.rs  serialize.rs
src/util/psbt/map/: global.rs  input.rs  mod.rs  output.rs
