[package]
authors = ["Riccardo Casatta <riccardo@casatta.it>", "Dev Random <c1.devrandom@niftybox.net>"]
edition = "2018"
readme = "README.md"
name = "embedded"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
cortex-m-semihosting = "0.3.7"
alloc-cortex-m = "0.4.1"
panic-halt = "0.2.0"
bitcoin = { path="../", default-features = false, features = ["no-std", "secp-lowmemory"] }

[dependencies.stm32l4]
features = ["stm32l4x6", "rt"]
version = "0.13.0"

[patch.crates-io]
# rust-Secp256k1 PR 299, static ECMULT, greatly reducing memory. This patch should be dropped once that is merged.
secp256k1 = { git = 'https://github.com/devrandom/rust-secp256k1', rev = '439d18863d9c6b566e2fbcc94352f922153f286c' }

[[bin]]
name = "embedded"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"